--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "vue": "^3.4.0",
     "vue-i18n": "^9.9.0",
+    "vue-recaptcha-v3": "^2.0.1",
     "vue-router": "4"
   },
   "devDependencies": {
